changes - thanks to all who suggested these ideas and gave me the code to show me how!

Language files listed under each version were made by the author beside them, and then
modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.3
  -  Improvements to language files (BenBE)
     * Added some missing Perl keywords and obscure default variables (BenBE)
     * Allow for escaped colons to appear in CSS names (BenBE, simon)
     * Added multiline continuation suppoert of preprocessor defines for
       C, C for Mac, C++ and CC++ with Qt support (BenBE)
     * Broken AutoIt highlighting (BenBE)
     * Problem with escaped backslash in PHP (BenBE)
Version 1.0.8.2
  -  Added language files
     * Brainfuck \ Brainfork (Benny Baumann)
     * HQ9+ (Benny Baumann)
     * INTERCAL (Benny Baumann)
     * LOLcode (Benny Baumann)
     * LScript (Beau McGuigan)
     * Pixel Bender (Richard Olsson)
     * ProvideX (Jeff Wilder)
     * VIM Script (Swaroop C H)
     * Visual Prolog (Thomas Linder Puls)
     * Whitespace (Benny Baumann)
  -  Changed priority for COMMENT_REGEXP compared to String highlighting (BenBE)
  -  Fixed correct escaping of spaces inside of URLs (BenBE)
  -  Updated the list of common file extensions (BenBE)
  -  Updated the language file check script in contrib/ (BenBE)
  -  Fixed a problem with link targets resulting in unclickable links (SF#2379120, BenBE)
  -  Fixed an undefined variable issue in langcheck.php (BenBE)
  -  Improvements to language files (BenBE)
     * eMail Header highlighting now uses the correct delimiters for keywords (BenBE)
     * eMail (RFC822\mbox) highlighting now highlights IPs, MIME types and
       subfield assignments correctly (BenBE)
     * Minor style changes in COBOL to improve loading performance (BenBE)
     * Added some missing keywords for D (BenBE)