@@ -125,6 +125,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - ProvideX               Jeff Wilder
 - Python                 Roberto Rossi
 - Rails                  Moises Deniz
+- Rebol                  Lecanu Guillaume
 - Reg                    SmokingRope
 - Robots                 Christian Lescuyer
 - Ruby                   Amit Gupta, Moises Deniz
