@@ -13,6 +13,8 @@ Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.3
+  -  Added language files
+     * Rebol (Lecanu Guillaume)
   -  Improvements to language files (BenBE)
      * Added some missing Perl keywords and obscure default variables (BenBE)
      * Allow for escaped colons to appear in CSS names (BenBE, simon)
